--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 sudo: required
 dist: trusty
+services:
+  - docker
 before_install:
-- sudo apt-get -qq update && sudo apt-get install -y --no-install-recommends texlive-fonts-recommended texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended latex-xcolor texlive-generic-recommended
+- docker pull blang/latex:ubuntu
 script:
-- mkdir build
-- pdflatex -interaction=nonstopmode -halt-on-error 2017-2018\ SE\ Paper.tex
+- docker run --rm --user="$(id -u):$(id -g)" --net=none -v "$PWD":/data blang/latex:ubuntu pdflatex -interaction=nonstopmode -halt-on-error 2017-2018\ SE\ Paper.tex
 before_deploy:
   - git config --global user.email "builds@travis-ci.com"
   - git config --global user.name "Travis CI"
