--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_deploy:
 - git config --global user.name "Travis CI"
 - export GIT_TAG=$TRAVIS_BRANCH-$TRAVIS_BUILD_NUMBER
 - git tag $GIT_TAG -a -m "Generated tag from TravisCI for build $TRAVIS_BUILD_NUMBER"
-- git push -q https://jeholliday:$GH_TOKEN@github.com/vanderbiltrobotics/SystemsEngineeringPaper --tags
+- git push -q https://jeholliday:$CIoluqTLYQg@github.com/vanderbiltrobotics/SystemsEngineeringPaper --tags
 deploy:
   skip_cleanup: true
   provider: releases
